cmake_minimum_required (VERSION 2.6)
project (aiExamples)

set (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Build the GLFW example programs")
set (GLFW_BUILD_TESTS OFF CACHE BOOL "Build the GLFW test programs")
set (GLFW_BUILD_DOCS OFF CACHE BOOL "Build the GLFW documentation")
set (GLFW_INSTALL OFF CACHE BOOL "Generate installation target")

set_property (GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory (thirdparty/glfw)

add_subdirectory (appToolkit)
add_subdirectory (aiToolkit)

add_subdirectory (examples/AIShowcaseApp)
add_subdirectory (examples/BasicExample)
add_subdirectory (examples/BehaviourTrees)
add_subdirectory (examples/Blackboards)
add_subdirectory (examples/DecisionTrees)
add_subdirectory (examples/FiniteStateMachine)
add_subdirectory (examples/Flocking)
add_subdirectory (examples/FlowFields)
add_subdirectory (examples/GameTrees)
add_subdirectory (examples/NavMesh)
add_subdirectory (examples/Pathfinding)
add_subdirectory (examples/Planners)
add_subdirectory (examples/RouletteWheelSelection)
add_subdirectory (examples/SteeringBehaviours)

set_target_properties (glfw PROPERTIES FOLDER thirdparty/glfw)
set_target_properties (appToolkit PROPERTIES FOLDER libs/appToolkit)
set_target_properties (aiToolkit PROPERTIES FOLDER libs/aiToolkit)
set_target_properties (AIShowcase PROPERTIES FOLDER examples)
set_target_properties (BasicExample PROPERTIES FOLDER examples)
set_target_properties (BehaviourTrees PROPERTIES FOLDER examples)
set_target_properties (Blackboards PROPERTIES FOLDER examples)
set_target_properties (DecisionTrees PROPERTIES FOLDER examples)
set_target_properties (FiniteStateMachines PROPERTIES FOLDER examples)
set_target_properties (Flocking PROPERTIES FOLDER examples)
set_target_properties (FlowFields PROPERTIES FOLDER examples)
set_target_properties (GameTrees PROPERTIES FOLDER examples)
set_target_properties (NavMesh PROPERTIES FOLDER examples)
set_target_properties (Pathfinding PROPERTIES FOLDER examples)
set_target_properties (Planners PROPERTIES FOLDER examples)
set_target_properties (RouletteWheelSelection PROPERTIES FOLDER examples)
set_target_properties (SteeringBehaviours PROPERTIES FOLDER examples)